# Pocket-Pixel

./: DEADLINE_1.md  DESIGN.md  LICENSE  README.md  design.md
app/: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/.fleet/: receipt.json
app/composeApp/: build-wasm.sh  build.gradle.kts
app/composeApp/src/androidMain/kotlin/org/just_somebody/pocket_pixel/: MainActivity.kt  NativeBridge.android.kt  Platform.android.kt
app/composeApp/src/androidMain/res/drawable/: search.xml
app/composeApp/src/commonMain/composeResources/values/: strings.xml
app/composeApp/src/commonMain/kotlin/org/just_somebody/pocket_pixel/: App.kt  GameBoyDisplay.kt  Greeting.kt  NativeBridge.kt  Platform.kt
app/composeApp/src/desktopMain/kotlin/org/just_somebody/pocket_pixel/: Platform.jvm.kt  main.kt
app/composeApp/src/iosMain/kotlin/org/just_somebody/pocket_pixel/: MainViewController.kt  Platform.ios.kt
app/composeApp/src/main/cpp/: CMakeLists.txt  pocket_pixel.cpp
app/composeApp/src/main/res/values/: colors.xml
app/composeApp/src/native/: AndroidGameBoy.cpp  CMakeLists.txt  GameBoyCore.cpp  GameBoyCore.h  GameBoyDisplay.c  GameBoyDisplay.h  NativeBridge.cpp  WebBridge.cpp  defines.h  hello.cpp  pocket_pixel.cpp
app/composeApp/src/native/Bridges/: NativeBridge.cpp
app/composeApp/src/native/ForgeLib/implement/: logger.c
app/composeApp/src/native/ForgeLib/include/: asserts.h  defines.h  expect.h  filesystem.h  hashMap.h  linearAlloc.h  logger.h  testManager.h  threadPool.h
app/composeApp/src/native/GameBoyEmulator/: main.cpp
app/composeApp/src/native/Machine/Parts/: bus.h  cpu.h
app/composeApp/src/native/Machine/Utils/: bit.h
app/composeApp/src/wasmJsMain/resources/: hello.js  hello.wasm  index.html  loadCpp.js  pocketPixel.js  pocketPixel.wasm
app/gradle/: libs.versions.toml
app/iosApp/Configuration/: Config.xcconfig
app/iosApp/iosApp.xcodeproj/: project.pbxproj
sql/: create.sql  insert.sql  select.sql
(+47 files in other folders)
